Create new Wildcard %DESCRSUB%

--- a/config/config.template.ini
+++ b/config/config.template.ini
@@ -575,7 +575,8 @@ test2 = 123456
 # %DIR%     = Direction of the telegram (0/1)
 # %DIRT%    = Direction of the telegram (Text-String)
 # %TSI%     = Tactical Short Information (I-IV)
-# %DESCR%   = Description, if description-module is used
+# %DESCR%   = Description of the Main-RIC, if description-module is used
+# %DESCRSUB% = Descriptoin of the Sub-RIC, if description-module is used
 # %DATE%    = Date (by script)
 # %TIME%    = Time (by script)
 # %BR%       = Insert line wrap (only in message)
