change config template

--- a/config/config.template.ini
+++ b/config/config.template.ini
@@ -563,13 +563,13 @@ topic = alarm/data
 #alarmlog_path =
 
 #Wildcards can be used, see end of the file!
-fms_message = [%DATE% %TIME%]: %FMS% - Status: %STATUS% - Direction: %DIRT% - TSI: %TSI%
+fms_message = [%DATE% - %TIME%] / %FMS% / Status: %STATUS% / Direction: %DIRT% / TSI: %TSI%
 
 #Wildcards can be used, see end of the file!
-zvei_message = [%DATE% %TIME%]: %ZVEI%
+zvei_message = [%DATE% - %TIME%] / %ZVEI%
 
 #Wildcards can be used, see end of the file!
-poc_message = [%DATE% - %TIME%] / [%DESCR%] / %MSG%
+poc_message = [%DATE% - %TIME%] / %DESCR% / %MSG%
 
 #####################
 ##### Not ready yet #
