change config description for hue plugin

--- a/config/config.template.ini
+++ b/config/config.template.ini
@@ -468,6 +468,7 @@ bridgeip =
 # the numeric ID of the lights, seperated by comma
 # you can configure wether you want the light to blink or not for each light seperately
 # if blinking is set to false, the time configured in the timeon/timeoff section will be added to the keepon value
+# IMPORTANT: be careful to add a device either as a standalone or in a group, but not both to prevent unwanted behaviour
 # use the following syntax: "lightid - true/false"
 # EXAMPLE: lightid = 1 - true, 2 - false
 #          -> Meaning that you want light 1 and 2 to react to your alarms, light 1 will blink while light 2 just stays on.
@@ -476,6 +477,7 @@ deviceid =
 # the numeric ID of the groups, seperated by comma
 # you can configure wether you want the group to blink or not for each group seperately
 # if blinking is set to false, the time configured in the timeon/timeoff section will be added to the keepon value
+# IMPORTANT: be careful to add a device either as a standalone or in a group, but not both to prevent unwanted behaviour
 # use the following syntax: "groupid - true/false"
 # EXAMPLE: groupid = 1 - true, 2 - false
 #          -> Meaning that you want group 1 and 2 to react to your alarms, group 1 will blink while group 2 just stays on.
