fix config descrpition for zvei and poc

--- a/config/config.template.ini
+++ b/config/config.template.ini
@@ -585,7 +585,8 @@ test2 = 123456
 
 ##### ZVEI
 # %ZVEI%    = ZVEI 5-tone Code
-# %DESCR%   = Description, if description-module is used
+# %DESCR%   = Description of the Main-RIC, if description-module is used
+# %DESCRSUB% = Descriptoin of the Sub-RIC, if description-module is used
 # %DATE%    = Date (by script)
 # %TIME%    = Time (by script)
 # %BR%       = Insert line wrap (only in message)
@@ -599,7 +600,8 @@ test2 = 123456
 # %FUNCTEXT% = POCSAG static Subric message (see [POC])
 # %MSG%      = Message of the POCSAG telegram
 # %BITRATE%  = Bitrate of the POCSAG telegram
-# %DESCR%    = Description, if description-module is used
+# %DESCR%   = Description of the Main-RIC, if description-module is used
+# %DESCRSUB% = Descriptoin of the Sub-RIC, if description-module is used
 # %DATE%     = Date (by script)
 # %TIME%     = Time (by script)
 # %BR%       = Insert line wrap (only in message)
